PY-2016.2.3 <dgollas@admins-macbook-pro.local Update gollas.xml

--- a/templates/gollas.xml
+++ b/templates/gollas.xml
@@ -28,4 +28,10 @@
       <option name="Python" value="true" />
     </context>
   </template>
+  <template name="attrtodict" value="result[&quot;$attr$&quot;]=self.$attr$$END$" toReformat="false" toShortenFQNames="true">
+    <variable name="attr" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="Python" value="true" />
+    </context>
+  </template>
 </templateSet>
